--- a/package.json
+++ b/package.json
@@ -1,17 +1,15 @@
 {
   "name": "otterbot",
   "version": "1.8.7",
-  "description": "",
+  "description": "Simple Discord bot that allows users to generate pictures of otters on demand.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node ."
   },
-  "author": "",
-  "license": "ISC",
+  "author": "qnton",
   "dependencies": {
     "discord.js": "^12.5.3",
     "dotenv": "^16.3.1",
-    "google-images": "^2.1.0",
-    "pm2": "^4.5.6"
+    "google-images": "^2.1.0"
   }
 }
